--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>khttp</groupId>
@@ -193,9 +193,9 @@
         </dependency>
     </dependencies>
     <properties>
-        <kotlin.version>1.3.72</kotlin.version>
+        <kotlin.version>1.9.22</kotlin.version>
         <spek.version>2.0.9</spek.version>
-        <org-json.version>20190722</org-json.version>
+        <org-json.version>20231013</org-json.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
         <awaitility.version>4.0.2</awaitility.version>
         <dokka-maven-plugin.version>0.10.1</dokka-maven-plugin.version>
